[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

[dependencies]
#riscv = { path = "../vendor/riscv", features = ["inline-asm"] }
#添加crate依赖，以便直接使用已有的伙伴分配器实现
buddy_system_allocator = "0.6"
#比特标志位的crate 
bitflags = "1.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7.0"
xmas-elf = "0.7.0"

[features]
board_qemu = []
board_k210 = []
