[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = { path = "../dependency/riscv", features = ["inline-asm"] }
#riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
#添加crate依赖，以便直接使用已有的伙伴分配器实现
buddy_system_allocator = "0.6"
#比特标志位的crate 
bitflags = "1.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
xmas-elf = "0.7.0"

[features]
board_qemu = []
board_k210 = []

[profile.release]
debug = true