[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = { path = "../dependency/riscv", features = ["inline-asm"] }
#riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
#添加crate依赖，以便直接使用已有的伙伴分配器实现
buddy_system_allocator = "0.6"
#比特标志位的crate 
bitflags = "1.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
xmas-elf = "0.7.0"
virtio-drivers = { path = "../dependency/virtio-drivers" }
k210-pac = { path = "../dependency/k210-pac" }
k210-hal = { path = "../dependency/k210-hal" }
k210-soc = { path = "../dependency/k210-soc" }
easy-fs = { path = "../easy-fs" }

[features]
board_qemu = []
board_k210 = []

[profile.release]
debug = true